--- a/style.css
+++ b/style.css
@@ -76,6 +76,47 @@ body{
 
 }
 
+.hover-link{
+    color: white;
+    transition: 0.2s ease-in-out;
+    font-weight: 500;
+
+}
+
+.hover-link:hover{
+  
+  
+   color: rgb(142, 142, 142);
+}
+
+
+.link-column{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.footer-container{
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+/* subfooter */
+
+.subfooter{
+    background-color: #000000;
+    padding: 10px;
+}
+a{
+    text-decoration: none;
+}
+
+.subfooter-container{
+    display: flex;
+    justify-content: center;
+    gap:30px ;
+}
+
 /* utility class */
 
 .row-2{
