--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .container{
- min-height: 94.6vh;
+    min-height: 94.6vh;
     display: flex;
     justify-content: space-evenly ;
     align-items: center;
@@ -79,8 +79,8 @@ body{
 .hover-link{
     color: white;
     transition: 0.2s ease-in-out;
-    font-weight: 500;
-
+ 
+    padding-left: 10px;
 }
 
 .hover-link:hover{
@@ -90,31 +90,24 @@ body{
 }
 
 
-.link-column{
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-}
-
-.footer-container{
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
 /* subfooter */
 
 .subfooter{
+   
     background-color: #000000;
-    padding: 10px;
+    padding: 10px 10px 10px 50px;
 }
 a{
     text-decoration: none;
+    font-size: 100;
+    
 }
 
 .subfooter-container{
+    
     display: flex;
     justify-content: center;
-    gap:30px ;
+    gap:10px ;
 }
 
 /* utility class */
@@ -159,5 +152,33 @@ font-size: 0.8rem;
         grid-row: span 1;
         grid-column: span 3;
     }
+
+
+
+ 
+.hover-link{
+    color: white;
+    transition: 0.2s ease-in-out;
+    font-weight: 400;
+}
+
+
+
+/* subfooter */
+
+.subfooter{
+    background-color: #000000;
+    padding: 2px;
+    font-size: 12px;
+}
+a{
+    text-decoration: none;
+}
+
+.subfooter-container{
+    display: flex;
+    justify-content: center;
+    
+}
 
  }
